@@ -1,3 +1,4 @@
+- MANTA-92 Add edge runtime performance log
 - MANTA-75 Better match reads to SV candidates to improve
 runtime and lower repeat observations
 - MANTA-85 Increase uniformity of tags in vcf output
